--- a/gensokyo-service/pom.xml
+++ b/gensokyo-service/pom.xml
@@ -43,6 +43,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>cn.nuaa.jensonxu</groupId>
             <artifactId>gensokyo-integration</artifactId>
             <version>${project.version}</version>
