--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <java.version>21</java.version>
         <lombok.version>1.18.30</lombok.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
+        <fastjson2.version>2.0.58</fastjson2.version>
         <spring-ai-alibaba.version>1.0.0-M5.1</spring-ai-alibaba.version>
     </properties>
 
@@ -50,6 +51,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
