【2025.9.21】流式对话增加聊天数据持久化功能

--- a/gensokyo-repository/pom.xml
+++ b/gensokyo-repository/pom.xml
@@ -15,12 +15,6 @@
     <description>Gensokyo Repository Module</description>
 
     <dependencies>
-        <!-- Spring Data JDBC 用于数据访问 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
-        </dependency>
-
         <!-- Spring 核心依赖，用于依赖注入和事务管理 -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -30,6 +24,21 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
