--- a/gensokyo-integration/pom.xml
+++ b/gensokyo-integration/pom.xml
@@ -26,7 +26,23 @@
 
 		<dependency>
 			<groupId>com.alibaba.cloud.ai</groupId>
-			<artifactId>spring-ai-alibaba-starter</artifactId>
+			<artifactId>spring-ai-alibaba-starter-dashscope</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba.fastjson2</groupId>
+			<artifactId>fastjson2</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.nuaa.jensonxu</groupId>
+			<artifactId>gensokyo-repository</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
