--- a/gensokyo-web/pom.xml
+++ b/gensokyo-web/pom.xml
@@ -3,19 +3,16 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<!-- 关键修改：引用自定义的父项目，而不是 spring-boot-starter-parent -->
 	<parent>
 		<groupId>cn.nuaa.jensonxu</groupId>
 		<artifactId>gensokyo-root</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<!-- 子模块只需要指定 artifactId，groupId 和 version 从父项目继承 -->
 	<artifactId>gensokyo-web</artifactId>
 	<name>gensokyo-web</name>
 	<description>Gensokyo Web Module</description>
 
-	<!-- 移除不需要的空标签 -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -36,6 +33,16 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 
 		<dependency>
