--- a/gensokyo-web/src/main/resources/application.properties
+++ b/gensokyo-web/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=gensokyo-web
 
 spring.ai.dashscope.api-key=${DASHSCOPE_API_KEY}
 spring.ai.dashscope.chat.options.model=qwen-turbo
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gensokyo?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
