--- a/gensokyo-integration/pom.xml
+++ b/gensokyo-integration/pom.xml
@@ -40,14 +40,19 @@
 		</dependency>
 
 		<dependency>
-			<groupId>cn.nuaa.jensonxu</groupId>
-			<artifactId>gensokyo-repository</artifactId>
-			<version>${project.version}</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
+			<artifactId>commons-collections4</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.nuaa.jensonxu</groupId>
+			<artifactId>gensokyo-repository</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
