【2026.1.5】相关依赖版本升级： 1、Spring AI Alibaba: 1.0.0.2 -> 1.1.0.0-M5 2、Spring Cloud: 2023.0.3 -> 2024.0.1 3、SpringBoot: 3.2.11 -> 3.4.1

--- a/fairy-integration/src/main/resources/bootstrap.yml
+++ b/fairy-integration/src/main/resources/bootstrap.yml
@@ -9,6 +9,6 @@ spring:
         file-extension: json
         refresh-enabled: true
         extension-configs:
-          - data-id: llm_config.json
-            group: SPICA_LLM_CONFIG
+          - data-id: llm_config
+            group: FAIRY_LLM_GROUP
             refresh: true
