--- a/fairy-web/src/main/resources/application.yml
+++ b/fairy-web/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
           model: qwen-turbo
   
   datasource:
-    url: jdbc:mysql://139.224.197.83:3306/spica?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://139.224.197.83:3306/fairy?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: user
     password: user123
     driver-class-name: com.mysql.cj.jdbc.Driver
