--- a/fairy-repository/pom.xml
+++ b/fairy-repository/pom.xml
@@ -15,7 +15,16 @@
     <description>Fairy Repository Module</description>
 
     <dependencies>
-        <!-- Spring 核心依赖，用于依赖注入和事务管理 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
