【2026.1.7】1、更新了相关依赖： Spring Cloud Alibaba: 2023.0.1.2 -> 2025.0.0.0 Spring AI: 1.1.0.0-M5 -> 1.1.0.0-RC2 2、MCP开发初探：开发时间工具并注册到Nacos，验证了整体链路的可行性

--- a/fairy-integration/src/main/resources/bootstrap.yml
+++ b/fairy-integration/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
 spring:
+  main:
+    banner-mode: off
   application:
-    name: spica-integration
+    name: fairy-integration
+  config:
+    import:
+      - optional:nacos:llm_config.${spring.cloud.nacos.config.file-extension}?group=FAIRY_LLM_GROUP&refreshEnabled=true
   cloud:
     nacos:
       config:
@@ -8,7 +13,29 @@ spring:
         namespace: 45a75346-2ee8-446c-8bca-20db580102c4
         file-extension: json
         refresh-enabled: true
-        extension-configs:
-          - data-id: llm_config
-            group: FAIRY_LLM_GROUP
-            refresh: true
+        username: nacos
+        password: nacos
+  ai:
+    mcp:
+      server:
+        name: time-server
+        version: 1.0.0
+        type: ASYNC
+        instructions: "This reactive server provides time information tools and resources"
+        protocol: STREAMABLE
+        request-timeout: 20s
+        streamable-http:
+          mcp-endpoint: /mcp
+          keep-alive-interval: 30s
+          disallow-delete: false
+    alibaba:
+      mcp:
+        nacos:
+          namespace: 45a75346-2ee8-446c-8bca-20db580102c4
+          server-addr: 139.224.197.83:8848
+          username: nacos
+          password: nacos
+          register:
+            enabled: true
+            service-group: mcp-server        ## 指定分组名称
+            service-name: time-server        ## 指定服务名称
