--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
         <fastjson2.version>2.0.58</fastjson2.version>
         <mybatis-plus.version>3.5.5</mybatis-plus.version>
         <spring-ai.version>1.1.0-M4</spring-ai.version>
-        <spring-ai-alibaba.version>1.1.0.0-M5</spring-ai-alibaba.version>
+        <spring-ai-alibaba.version>1.1.0.0-RC2</spring-ai-alibaba.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
-        <spring-cloud-alibaba.version>2023.0.1.2</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
         <caffeine.version>3.1.8</caffeine.version>
     </properties>
 
@@ -79,8 +79,14 @@
 
             <dependency>
                 <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-zhipuai</artifactId>
+                <artifactId>spring-ai-starter-model-zhipuai</artifactId>
                 <version>${spring-ai.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cloud.ai</groupId>
+                <artifactId>spring-ai-alibaba-starter-mcp-registry</artifactId>
+                <version>${spring-ai-alibaba.version}</version>
             </dependency>
 
             <dependency>
