【2026.1.7】优化了模型调用的代码结构；增加了模型对MCP工具的初步支持

--- a/fairy-integration/pom.xml
+++ b/fairy-integration/pom.xml
@@ -94,6 +94,11 @@
 			<artifactId>fairy-repository</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba.nacos</groupId>
+			<artifactId>nacos-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
