--- a/fairy-web/pom.xml
+++ b/fairy-web/pom.xml
@@ -46,6 +46,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>cn.nuaa.jensonxu</groupId>
 			<artifactId>fairy-integration</artifactId>
 			<version>${project.version}</version>
