--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <caffeine.version>3.1.8</caffeine.version>
         <rometools.version>2.1.0</rometools.version>
         <okhttp.version>4.12.0</okhttp.version>
+        <minio.version>8.5.7</minio.version>
     </properties>
 
     <dependencyManagement>
@@ -152,6 +153,12 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>${okhttp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.minio</groupId>
+                <artifactId>minio</artifactId>
+                <version>${minio.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
