--- a/fairy-web/src/main/resources/application.yml
+++ b/fairy-web/src/main/resources/application.yml
@@ -19,6 +19,20 @@ spring:
         options:
           model: deepseek-chat
 
+  data:
+    redis:
+      host: 139.224.197.83
+      port: 6379
+      password: root
+      database: 0
+      connect-timeout: 5000ms
+      lettuce:
+        pool:
+          max-active: 8    # 连接池最大连接数
+          max-idle: 8      # 连接池最大空闲连接数
+          min-idle: 2      # 连接池最小空闲连接数
+          max-wait: -1ms   # 连接池最大阻塞等待时间，-1表示不限制
+
   datasource:
     url: jdbc:mysql://139.224.197.83:3306/fairy?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: user
