--- a/fairy-integration/pom.xml
+++ b/fairy-integration/pom.xml
@@ -96,7 +96,7 @@
 
 		<dependency>
 			<groupId>cn.nuaa.jensonxu</groupId>
-			<artifactId>fairy-repository</artifactId>
+			<artifactId>fairy-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
