--- a/fairy-service/pom.xml
+++ b/fairy-service/pom.xml
@@ -53,6 +53,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>cn.nuaa.jensonxu</groupId>
             <artifactId>fairy-integration</artifactId>
             <version>${project.version}</version>
