--- a/fairy-web/pom.xml
+++ b/fairy-web/pom.xml
@@ -56,6 +56,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>cn.nuaa.jensonxu</groupId>
 			<artifactId>fairy-integration</artifactId>
 			<version>${project.version}</version>
