--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <rometools.version>2.1.0</rometools.version>
         <okhttp.version>4.12.0</okhttp.version>
         <minio.version>8.5.7</minio.version>
+        <rocketmq.version>2.3.1</rocketmq.version>
     </properties>
 
     <dependencyManagement>
@@ -91,6 +92,12 @@
                 <groupId>com.alibaba.cloud.ai</groupId>
                 <artifactId>spring-ai-alibaba-starter-mcp-registry</artifactId>
                 <version>${spring-ai-alibaba.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq.version}</version>
             </dependency>
 
             <dependency>
